eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log

**** Build of configuration Debug for project prueba ****

Nothing to build for project prueba
16:34:21 **** Incremental Build of configuration Debug for project prueba ****
make all 
Building file: ../main.cc
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cc"
../main.cc:1:1: error: ‘sql’ does not name a type
    1 | sql::mysql::MySQL_Driver *driver;
      | ^~~
../main.cc:2:1: error: ‘sql’ does not name a type
    2 | sql::Connection *con;
      | ^~~
../main.cc:4:1: error: ‘driver’ does not name a type
    4 | driver = sql::mysql::get_mysql_driver_instance();
      | ^~~~~~
../main.cc:5:1: error: ‘con’ does not name a type
    5 | con = driver->connect("tcp://127.0.0.1:3306", "user", "password");
      | ^~~
../main.cc:7:1: error: expected unqualified-id before ‘delete’
    7 | delete con;
      | ^~~~~~
make: *** [subdir.mk:20: main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
16:34:34 **** Incremental Build of configuration Debug for project prueba ****
make all 
Building file: ../main.cc
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cc"
../main.cc:1:1: error: ‘sql’ does not name a type
    1 | sql::mysql::MySQL_Driver *driver;
      | ^~~
../main.cc:2:1: error: ‘sql’ does not name a type
    2 | sql::Connection *con;
      | ^~~
../main.cc:4:1: error: ‘driver’ does not name a type
    4 | driver = sql::mysql::get_mysql_driver_instance();
      | ^~~~~~
../main.cc:5:1: error: ‘con’ does not name a type
    5 | con = driver->connect("tcp://127.0.0.1:3306", "user", "password");
      | ^~~
../main.cc:7:1: error: expected unqualified-id before ‘delete’
    7 | delete con;
      | ^~~~~~
make: *** [subdir.mk:20: main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
16:40:04 **** Incremental Build of configuration Debug for project prueba ****
make all 
Building file: ../main.cc
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cc"
../main.cc:1:1: error: ‘sql’ does not name a type
    1 | sql::mysql::MySQL_Driver *driver;
      | ^~~
../main.cc:2:1: error: ‘sql’ does not name a type
    2 | sql::Connection *con;
      | ^~~
../main.cc:4:1: error: ‘driver’ does not name a type
    4 | driver = sql::mysql::get_mysql_driver_instance();
      | ^~~~~~
../main.cc:5:1: error: ‘con’ does not name a type
    5 | con = driver->connect("tcp://127.0.0.1:3306", "user", "password");
      | ^~~
../main.cc:7:1: error: expected unqualified-id before ‘delete’
    7 | delete con;
      | ^~~~~~
make: *** [subdir.mk:20: main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
16:40:19 **** Incremental Build of configuration Debug for project prueba ****
make all 
Building file: ../main.cc
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cc"
Finished building: ../main.cc
 
Building target: prueba
Invoking: GCC C++ Linker
g++ -L/home/alvaro/proyecto502-git/lib -o "prueba" ./main.o    -l/home/alvaro/proyecto502-git/lib
/usr/bin/ld: no se puede encontrar -l/home/alvaro/proyecto502-git/lib: No existe el archivo o el directorio
collect2: error: ld returned 1 exit status
make: *** [makefile:58: prueba] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
16:44:06 **** Incremental Build of configuration Debug for project prueba ****
make all 
Building file: ../main.cc
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cc"
Finished building: ../main.cc
 
Building target: prueba
Invoking: GCC C++ Linker
g++ -L/home/alvaro/proyecto502-git/lib -o "prueba" ./main.o    -l/home/alvaro/proyecto502-git/lib
/usr/bin/ld: no se puede encontrar -l/home/alvaro/proyecto502-git/lib: No existe el archivo o el directorio
collect2: error: ld returned 1 exit status
make: *** [makefile:58: prueba] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
16:48:43 **** Incremental Build of configuration Debug for project prueba ****
make all 
Building target: prueba
Invoking: GCC C++ Linker
g++ -L/home/alvaro/proyecto502-git/lib -o "prueba" ./main.o    -l/home/alvaro/proyecto502-git/lib
/usr/bin/ld: no se puede encontrar -l/home/alvaro/proyecto502-git/lib: No existe el archivo o el directorio
collect2: error: ld returned 1 exit status
make: *** [makefile:58: prueba] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
16:49:39 **** Incremental Build of configuration Debug for project prueba ****
make all 
Building target: prueba
Invoking: GCC C++ Linker
g++ -L/home/alvaro/proyecto502-git/lib -o "prueba" ./main.o    -l/home/alvaro/proyecto502-git/lib
/usr/bin/ld: no se puede encontrar -l/home/alvaro/proyecto502-git/lib: No existe el archivo o el directorio
collect2: error: ld returned 1 exit status
make: *** [makefile:58: prueba] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
16:52:40 **** Incremental Build of configuration Debug for project prueba ****
make all 
Building target: prueba
Invoking: GCC C++ Linker
g++ -L/home/alvaro/proyecto502-git/lib -o "prueba" ./main.o    -l/home/alvaro/proyecto502-git/lib
/usr/bin/ld: no se puede encontrar -l/home/alvaro/proyecto502-git/lib: No existe el archivo o el directorio
collect2: error: ld returned 1 exit status
make: *** [makefile:58: prueba] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
16:52:40 **** Build of configuration Debug for project prueba2 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
Building file: ../main.cc
Invoking: Cygwin C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cc"
Finished building: ../main.cc
 
Building target: prueba2.exe
Invoking: Cygwin C++ Linker
g++  -o "prueba2.exe" ./main.o   
/usr/bin/ld: /usr/lib/gcc/x86_64-linux-gnu/11/../../../x86_64-linux-gnu/Scrt1.o: en la función `_start':
(.text+0x1b): referencia a `main' sin definir
collect2: error: ld returned 1 exit status
make: *** [makefile:58: prueba2.exe] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
16:53:18 **** Incremental Build of configuration Debug for project prueba ****
make all 
Building target: prueba
Invoking: GCC C++ Linker
g++ -L/home/alvaro/proyecto502-git/lib -o "prueba" ./main.o    -l/home/alvaro/proyecto502-git/lib
/usr/bin/ld: no se puede encontrar -l/home/alvaro/proyecto502-git/lib: No existe el archivo o el directorio
collect2: error: ld returned 1 exit status
make: *** [makefile:58: prueba] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
16:53:19 **** Incremental Build of configuration Debug for project prueba2 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
Building target: prueba2.exe
Invoking: Cygwin C++ Linker
g++  -o "prueba2.exe" ./main.o   
/usr/bin/ld: /usr/lib/gcc/x86_64-linux-gnu/11/../../../x86_64-linux-gnu/Scrt1.o: en la función `_start':
(.text+0x1b): referencia a `main' sin definir
collect2: error: ld returned 1 exit status
make: *** [makefile:58: prueba2.exe] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
16:53:34 **** Incremental Build of configuration Debug for project prueba ****
make all 
Building target: prueba
Invoking: GCC C++ Linker
g++ -L/home/alvaro/proyecto502-git/lib -o "prueba" ./main.o    -l/home/alvaro/proyecto502-git/lib
/usr/bin/ld: no se puede encontrar -l/home/alvaro/proyecto502-git/lib: No existe el archivo o el directorio
collect2: error: ld returned 1 exit status
make: *** [makefile:58: prueba] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
16:53:34 **** Incremental Build of configuration Debug for project prueba2 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
Building file: ../main.cc
Invoking: Cygwin C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cc"
Finished building: ../main.cc
 
Building target: prueba2.exe
Invoking: Cygwin C++ Linker
g++  -o "prueba2.exe" ./main.o   
Finished building target: prueba2.exe
 
16:53:51 **** Incremental Build of configuration Debug for project prueba ****
make all 
Building target: prueba
Invoking: GCC C++ Linker
g++ -L/home/alvaro/proyecto502-git/lib -o "prueba" ./main.o    -l/home/alvaro/proyecto502-git/lib
/usr/bin/ld: no se puede encontrar -l/home/alvaro/proyecto502-git/lib: No existe el archivo o el directorio
collect2: error: ld returned 1 exit status
make: *** [makefile:58: prueba] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
16:53:51 **** Incremental Build of configuration Debug for project prueba2 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
make: No se hace nada para 'all'.
16:58:26 **** Incremental Build of configuration Debug for project prueba2 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
make: No se hace nada para 'all'.
17:00:05 **** Incremental Build of configuration Debug for project prueba2 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
make: No se hace nada para 'all'.
